# pythonify_salesforce_objects

./: .gitignore  README.md  builder.py  config.py  main.py  pyproject.toml  requirements.txt  results.py  test.py
sObjects/: AIApplication.py  AIApplicationConfig.py  AIInsightAction.py  AIInsightFeedback.py  AIInsightReason.py  AIInsightValue.py  AIPredictionEvent.py  AIRecordInsight.py  AcceptedEventRelation.py  Account.py  AccountChangeEvent.py  AccountCleanInfo.py  AccountContactRole.py  AccountContactRoleChangeEvent.py  AccountFeed.py  AccountHistory.py  AccountPartner.py  AccountShare.py  ActionLinkGroupTemplate.py  ActionLinkTemplate.py  ActiveFeatureLicenseMetric.py  ActivePermSetLicenseMetric.py  ActiveProfileMetric.py  ActivityHistory.py  AdditionalNumber.py  AggregateResult.py  AlternativePaymentMethod.py  AlternativePaymentMethodShare.py  Announcement.py  ApexClass.py  ApexComponent.py  ApexEmailNotification.py  ApexLog.py  ApexPage.py  ApexPageInfo.py  ApexTestQueueItem.py  ApexTestResult.py  ApexTestResultLimits.py  ApexTestRunResult.py  ApexTestSuite.py  (+730 more)
